Bug #36291: * Added max-height to the software update dialog * aligned buttons with inputfields in LabelPanes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@56484 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Dialog.styl
@@ -66,6 +66,12 @@
 	max-width: none;
 }
 
+.umc .dijitDialogPaneContent .umcText {
+	max-height: 400px;
+	overflow: auto;
+	//white-space: pre;
+}
+
 .claro .dijitDialogPaneContentArea {
 	/* trick to get action bar (gray bar at bottom with OK/cancel buttons) to span from
 	 * left to right but still indent dialog content
