--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Common.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/form/Common.styl
@@ -311,6 +311,7 @@ label {
 
 .umc .umcLabelPane {
 	display: inline-block;
+	vertical-align: top;
 	.umcLabelPaneLabeNodeBottom label {
 		padding-top: 0.25em;
 	}
